--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Hello World</title>
 	</head>
 	<body>
+		<img src="thGEPI1PEL" alt="UW Husky Drumline" 
+		style="width:500px;height:600px;">
 		<h1>Hello World</h1>
 	</body>
 </html>
