--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 		<h1>Hello World</h1>
 		<img src="thGEPI1PEL.jpeg" alt="UW Husky Drumline" 
 		style="width:500px;height:600px;">
+	<video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+	</video>
 	</body>
 </html>
